Replace use MapBuilder where applicable